2009-06-10 Harald Oehlmann  <oehhar@users.sourceforge.net>

	* no.rc added norwegian translation file
	[Feature Request 2797153] provided by Lars Martin Hambro
	
	* passwddlg.tcl (PasswdDlg::_verifonpasswd) check for
	disabled password field and confirm directly.
	[Bug 1642050] (Calvin Bascom) Enter key did not confirm
	dialog when -passwdstate disabled.
	
	* combobox.tcl (ComboBox::_select) included [Patch 981545],
	but commented out - it works for me without it.

2009-06-10 Harald Oehlmann  <oehhar@users.sourceforge.net>

	* dialog.html Added documentation for option -buttonwidth
	of Dialog
	[Bug 1668587] (Eric Leunissen)

2009-06-10 Harald Oehlmann  <oehhar@users.sourceforge.net>

	* arrow.tcl initialised set _grab(oldstate) to "normal" to avoid
	error when there is a ArrowButton::_leave without corresponding
	ArrowButton::_enter [Bug 2762361]
	
	* entry.tcl (Entry::_path_command) Add "invoke" to the list of
	internally handled commands
	[Bug 2340320] (patch by relaxmike@users.sourceforge.net)
	
	* uitils.tcl (BWidget::place) BWidget::place used screen width
	instead window width.
	[Bug 1842346] (patch by Niels Gollesch ngoelles@users.sourceforge.net)
	
	* listbox.tcl (ListBox::_redraw_selection) Added check if redrawn
	item is on the to-delete list and thus does not exist any more as
	BWidget. [Bug 1752755] (legolas_a20@users.sourceforge.net]

2008-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::_node_name_rev): Return node names as they are
	input, and properly handle :: in node names.  This changes
	internal node name reps, but should be transparent to the user,
	except for the result of [insert].

2008-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tree.tcl (Tree::_redraw_selection):       do not allow empty
	* listbox.tcl (ListBox::_redraw_selection): fill color as that
	creates a transparent item that doesn't return a bbox.  This
	showed up on OS X/Aqua, where the listbox selectforeground
	defaults to empty. [AS Bug 77186 74923]
