@@ -38,21 +38,22 @@
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="#-default">-default</A></TR>
+<TD>&nbsp;&nbsp;<A HREF="#-geometry">-geometry</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-image">-image</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-modal">-modal</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-parent">-parent</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-place">-place</A></TR>
+</TR>
+<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-separator">-separator</A></TR>
-</TR>
-<TR>
 <TD>&nbsp;&nbsp;<A HREF="#-side">-side</A></TR>
-<TD>&nbsp;&nbsp;<A HREF="#-title">-title</A></TR>
 </TR>
 <TR>
+<TD>&nbsp;&nbsp;<A HREF="#-title">-title</A></TR>
 <TD>&nbsp;&nbsp;<A HREF="#-transient">-transient</A></TR>
 </TR>
 </TABLE></DD>
@@ -157,6 +158,14 @@ this button is invoked.
 
 Specifies the number of the default button of the Dialog.
 When user press Return in the Dialog, this button is invoked.
+</DD>
+</DL>
+</DL>
+<DL><DT><A NAME="-geometry"><B>-geometry</B></A></DT>
+<DD>
+
+Set the <B>geometry</B> used when method <B>draw</B> is called.
+See <B>wm geometry</B> for a parameter description.
 </DD>
 </DL>
 <DL><DT><A NAME="-image"><B>-image (read-only)</B></A></DT>
